--- a/servicios.html
+++ b/servicios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,8 +15,12 @@
     <script src="js/funciones.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="fancybox/jquery.fancybox.css">
+    <script src="fancybox/jquery.fancybox.js"></script>
 </head>
+
 <body>
     <i id="subir" class="fa-solid fa-chevron-up"></i>
     <header>
@@ -41,6 +46,134 @@
         <a href="contacto.html">Contacto</a>
         <a href="#" class="btn_cotizar" id="cotizar">Cotizaciones</a>
     </nav>
+    <section class="servicio_limpieza_info">
+        <h1 class="title13">HOW WE DO IT</h1>
+        <h2 class="title14">A Better Choice For Cleaning</h2>
+        <p class="textservicio">
+            Donec commodo bibendum finibus. Aenean quis turpis nisi. Pellentesque lectus odio, lacinia sed ligula
+            tincidunt, efficitur porta augue. Duis viverra cursus ex, ut vulputate augue sollicitudin quis.
+        </p>
+    </section>
+    <section class="servicios_limpieza">
+        <figure class="foto1">
+            <a rel="gallery1" href="img/servicio1.jpg" title="FOTO 1">
+                <img src="img/servicio1.jpg" alt="">
+            </a>
+        </figure>
+        <figure class="foto2">
+            <a rel="gallery1" href="img/servicio2.jpg" title="FOTO 2">
+                <img src="img/servicio2.jpg" alt="">
+            </a>
+        </figure>
+        <figure class="foto3">
+            <a rel="gallery1" href="img/servicio3.jpg" title="FOTO 3">
+                <img src="img/servicio3.jpg" alt="">
+            </a>
+        </figure>
+        <figure class="foto4">
+            <a rel="gallery1" href="img/servicio4.jpg" title="FOTO 4">
+                <img src="img/servicio4.jpg" alt="">
+            </a>
+        </figure>
+        <figure class="foto5">
+            <a rel="gallery1" href="img/servicio5.jpg" title="FOTO 5">
+                <img src="img/servicio5.jpg" alt="">
+            </a>
+        </figure>
+    </section>
+    <section class="servicios_ofrecidos">
+        <h1 class="titulo_so">Servicios que ofrecemos</h1>
+        <article class="acordeon">
+            <div class="acordeon_titulo titulo1">
+                <h2>En hogar</h2>
+                <i class="icono4 rotar fa-solid fa-circle-arrow-down"></i>
+            </div>
+            <p class="acordeon_contenido contenido1">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ex,eligendi. Iste, beatae error magni a
+                sequi sit voluptatum obcaecatirecusandae, nisi ipsa laboriosam vero cupiditate vel molestiae reiciendis
+                itaque.
+                <div class="galeria">
+                    <a href="img/hogar1.jpeg" class="fancybox" title="Limpieza de Hogar 1" rel="gallery1">
+                        <figure>
+                            <img src="img/hogar1.jpeg" alt="">
+                        </figure>
+                    </a>
+                    <a href="img/hogar2.jpeg" class="fancybox" title="Limpieza de Hogar 2" rel="gallery1">
+                        <figure>
+                            <img src="img/hogar2.jpeg" alt="">
+                        </figure>
+                    </a>
+                </div>
+            </p>
+        </article>
+        <article class="acordeon">
+            <div class="acordeon_titulo titulo2">
+                <h2>En residencia</h2>
+                <i class="icono5 rotar fa-solid fa-circle-arrow-down"></i>
+            </div>
+            <p class="acordeon_contenido contenido2">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ex,eligendi. Iste, beatae error magni a sequi sit voluptatum obcaecatirecusandae, nisi ipsa laboriosam vero cupiditate vel molestiae reiciendis itaque.
+                <div class="galeria">
+                    <a href="img/residencia1.jpeg" class="fancybox" title="Limpieza de Residencias 1" rel="gallery1">
+                        <figure>
+                            <img src="img/residencia1.jpeg" alt="">
+                        </figure>
+                    </a>
+                    <a href="img/residencia2.jpeg" class="fancybox" title="Limpieza de Residencias 2" rel="gallery1">
+                        <figure>
+                            <img src="img/residencia2.jpeg" alt="">
+                        </figure>
+                    </a>
+                </div>
+            </p>
+        </article>
+        <article class="acordeon">
+            <div class="acordeon_titulo titulo3">
+                <h2>En departamentos</h2>
+                <i class="icono6 rotar fa-solid fa-circle-arrow-down"></i>
+            </div>
+            <p class="acordeon_contenido contenido3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ex,eligendi. Iste, beatae error magni a
+                sequi sit voluptatum obcaecatirecusandae, nisi ipsa laboriosam vero cupiditate vel molestiae reiciendis
+                itaque.
+                <div class="galeria">
+                    <a href="img/departamento1.jpeg" class="fancybox" title="Limpieza de Departamentos 1" rel="gallery1">
+                        <figure>
+                            <img src="img/departamento1.jpeg" alt="">
+                        </figure>
+                    </a>
+                    <a href="img/departamento2.webp" class="fancybox" title="Limpieza de Departamentos 2" rel="gallery1">
+                        <figure>
+                            <img src="img/departamento2.webp" alt="">
+                        </figure>
+                    </a>
+                </div>
+            </p>
+        </article>
+        <article class="acordeon">
+            <div class="acordeon_titulo titulo4">
+                <h2>En oficinas</h2>
+                <i class="icono7 rotar fa-solid fa-circle-arrow-down"></i>
+            </div>
+            <p class="acordeon_contenido contenido4">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ex,eligendi. Iste, beatae error magni a
+                sequi sit voluptatum obcaecatirecusandae, nisi ipsa laboriosam vero cupiditate vel molestiae reiciendis
+                itaque.
+                <div class="galeria">
+                    <a href="img/oficina1.jpeg" class="fancybox" title="Limpieza de Oficinas 1" rel="gallery1">
+                        <figure>
+                            <img src="img/oficina1.jpeg" alt="">
+                        </figure>
+                    </a>
+                    <a href="img/oficina2.png" class="fancybox" title="Limpieza de Oficinas 2" rel="gallery1">
+                        <figure>
+                            <img src="img/oficina2.png" alt="">
+                        </figure>
+                    </a>
+                </div>
+            </p>
+        </article>
+    </section>
     <footer>
         <div class="info_logo">
             <figure>
@@ -79,38 +212,6 @@
             </p>
         </div>
     </footer>
-    <section id="formulario" class="fondomodal">
-        <div class="contenidomodal">
-            <div class="estructuramodal">
-                <i id="cerrarbtn" class="cerrar modal fas fa-times-circle wow animate__animated animate__rotateIn"></i>
-            </div>
-            <figure>
-                <img src="img/coca-cola-navidad.jpg" alt="">
-            </figure>
-        </div>
-    </section>
-    <script>
-        var fondomodal = document.getElementById("formulario");
-        var btn_cotizar = document.getElementById("cotizar");
-        var cerrar = document.getElementById("cerrarbtn");
-
-        function tiempo(){
-            fondomodal.style.display = "block";
-        }
-        // setTimeout(tiempo, 2000);
-
-        btn_cotizar.onclick = function (){
-            fondomodal.style.display = "block";
-        };
-        cerrar.onclick = function (){
-            fondomodal.style.display = "none";
-        };
-        window.onclick = function (event){
-            if(event.target == fondomodal){
-                fondomodal.style.display = "none";
-            }
-        };
-    </script>
     <section id="modal" class="fondomodal">
         <div class="contenidomodal">
             <div class="estructuramodal">
@@ -125,16 +226,16 @@
         var fondomodal = document.getElementById("modal");
         var cerrar = document.getElementById("cerrarbtn");
 
-        function tiempo(){
+        function tiempo() {
             fondomodal.style.display = "block";
         }
         setTimeout(tiempo, 3000);
 
-        cerrar.onclick = function (){
+        cerrar.onclick = function () {
             fondomodal.style.display = "block";
         };
-        window.onclick = function (event){
-            if(event.target == fondomodal){
+        window.onclick = function (event) {
+            if (event.target == fondomodal) {
                 fondomodal.style.display = "none";
             }
         };
@@ -144,5 +245,27 @@
             $("nav").slideToggle();
         });
     </script>
+    <script>
+        $(".titulo1").click(function () {
+            $(".contenido1").slideToggle();
+            $(".icono4").toggleClass("rotar");
+        });
+
+        $(".titulo2").click(function () {
+            $(".contenido2").slideToggle();
+            $(".icono5").toggleClass("rotar");
+        });
+
+        $(".titulo3").click(function () {
+            $(".contenido3").slideToggle();
+            $(".icono6").toggleClass("rotar");
+        });
+
+        $(".titulo4").click(function () {
+            $(".contenido4").slideToggle();
+            $(".icono7").toggleClass("rotar");
+        });
+    </script>
 </body>
+
 </html>
