--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
             <iframe src="https://www.youtube.com/embed/-KR82M3Czuk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
+    <section class="fotoparallaxs">
+        <h2 class="texto">
+            Te brindamos el mejor servicio para la limpieza de tu hogar, empresa, institución, departamento, entre otros lugares.
+            <br><br>
+            Cotiza con nosotros.
+        </h2>
+        <div class="transparencia"></div>
+    </section>
     <!-- <section id="comentarios">
         <div class="fondo">
             <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
